--- a/app/views/spree/admin/users/_form.html.erb
+++ b/app/views/spree/admin/users/_form.html.erb
@@ -5,6 +5,11 @@
       <%= f.email_field :email, class: 'form-control' %>
       <%= f.error_message_on :email %>
     <% end %>
+    <%= f.field_container :phone, class: ['form-group'] do %>
+      <%= f.label :phone, Spree.t(:phone) %>
+      <%= f.text_field :phone, class: 'form-control' %>
+      <%= f.error_message_on :phone %>
+    <% end %>
 
     <div data-hook="admin_user_form_roles" class="form-group">
       <strong><%= Spree.t(:roles) %></strong>
