--- a/app/views/confirm_mailer/send_confirmation.html.erb
+++ b/app/views/confirm_mailer/send_confirmation.html.erb
@@ -1,4 +1,3 @@
 <h4> Вітання <%= @user_name %>!</h4>
 <p>Дякуємо за реєстрацію</p>
-
-<%= link_to "Підтвердити акаунт", spree.confirm_email_path(@confirmation_token), target: :_blank %>
+<a href="https://videoko.com.ua/confirm_email/<%=@confirmation_token%>" target="_blank">Підтвердити акаунт</a>
