--- a/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
+++ b/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
@@ -4,12 +4,11 @@
 .green_confirmation{
   color: green;
   font-weight: bold;
-  
 }
 .text-sku{
   display: flex;
   justify-content: flex-end;
-  margin-right: 0.5rem
+  margin-right: 0.5rem;
 }
 #rotation{
   max-width: 50rem;
