--- a/app/assets/stylesheets/spree/frontend/contact.scss
+++ b/app/assets/stylesheets/spree/frontend/contact.scss
@@ -197,6 +197,7 @@ padding-left: 20%;
   a:link {
     text-decoration: none;
   }
+/*
   &:hover{
     .name_product{
     color:white;
@@ -219,6 +220,7 @@ padding-left: 20%;
    }
   }
  }
+*/
 }
 .products_image{
   justify-content: center;
