--- a/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
+++ b/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
@@ -5,6 +5,9 @@
   color: green;
   font-weight: bold;
 }
+.card{
+  border: none !important;
+}
 .text-sku{
   display: flex;
   justify-content: flex-end;
