--- a/app/assets/stylesheets/spree/frontend/views/spree/shared/_footer.scss
+++ b/app/assets/stylesheets/spree/frontend/views/spree/shared/_footer.scss
@@ -109,10 +109,12 @@
 }
 .card_index{
   height: -webkit-fill-available;
-  border: 1px solid black;
+  //border: 1px solid black;
   padding: 0.5rem;
   &:hover{
-    background: #00336E;
+    .index_btn{
+      background: #00336E;
+    }
   }
 }
 .display_flex{
@@ -167,7 +169,7 @@
 
 .default_choose{
   background: white;
-    border: 1px solid black;
+// border: 1px solid black;
 }
 
 @media (max-width: 1200px) {
