--- a/app/assets/stylesheets/spree/frontend/contact.scss
+++ b/app/assets/stylesheets/spree/frontend/contact.scss
@@ -1,3 +1,13 @@
+body{
+  background-color: rgb(250, 250, 250);
+}
+.plp-filters-card-header{
+  background-color: rgb(250, 250, 250);
+}
+.plp-filters-card{
+  background-color: rgb(250, 250, 250);
+}
+
 .about_variant{
   border-left: 0.2rem solid black;
   margin-top: 3%;
