--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -1,6 +1,6 @@
 <% cache spree_nav_cache_key('header') do %>
 
-<ul class="nav title_main">
+<ul class="nav center_vartical z_index">
     <li ><%= link_to Spree.t('homepage.main_page'), spree.root_path, class: " padding_main main-nav-bar-item main_nav" %></li>
 <li>
 
@@ -12,8 +12,8 @@
 
   <ul class="navbar-nav">
   <li class="nav-item dropdown">
-      <span>
-        <%= link_to Spree.t('homepage.shop_now'), spree.products_path, class: "white padding_main main-nav-bar-item dis_link", data_toggle:"dropdown", id:"catalog"%>
+      <span class="white padding_main main-nav-bar-item dis_link" data-toggle="dropdown" id="catalog">
+        <%= Spree.t('homepage.shop_now')%>
       </span>
       <ul class="dropdown-menu catalog_inside">
         <% spree_navigation_data.each do |root| %>
