--- a/app/views/spree/shared/_nav_bar.html.erb
+++ b/app/views/spree/shared/_nav_bar.html.erb
@@ -1,5 +1,7 @@
-<ul id="nav-bar" class="nav bar_li_small align-items-center d-flex justify-content-end navbar-right">
-
+<ul class="card_log">
+  <li id="link-to-cart">
+    <%= render 'spree/shared/cart', class: 'display d-xl-inline-block cart-icon--xl', size: 36, item_count: 0 %>
+  </li>
   <% if !spree_user_signed_in? %>
     <li class="login_out">
       <%= link_to Spree.t('nav_bar.log_in'), spree_login_path, class: "main_nav main-nav-bar-item main-nav-bar-button header_title_category"  %>
@@ -11,10 +13,6 @@
     <li class="login_out"><%= link_to spree_current_user.full_name_header, spree_logout_path, class: "main_nav full_name main-nav-bar-button header_title_category green_confirmation", method: :get  %></li>
     <% end %>
   <% end %>
-  <li id="link-to-cart">
-    <%= render 'spree/shared/cart', class: 'display d-xl-inline-block cart-icon--xl', size: 36, item_count: 0 %>
-
-  </li>
 
 <%if false%>
   <li >
