--- a/app/assets/stylesheets/spree/frontend/contact.scss
+++ b/app/assets/stylesheets/spree/frontend/contact.scss
@@ -1,5 +1,5 @@
 body{
-  background-color: rgb(250, 250, 250);
+  background-color: rgb(245, 245, 245);
   display: flex;
   min-height: 100vh;
   flex-direction: column;
@@ -25,7 +25,8 @@ body{
   max-width: 15rem;
 }
 .background_color{
-  background-color: rgb(250, 250, 250);
+  background-color: rgb(245, 245, 245);
+  //background-color: rgb(250, 250, 250);
 }
 .index_front_size{
   //font-size: 1.1vw;
