--- a/app/assets/stylesheets/spree/frontend/views/spree/shared/_footer.scss
+++ b/app/assets/stylesheets/spree/frontend/views/spree/shared/_footer.scss
@@ -77,7 +77,7 @@
   color: white;
 }
 .im{
-  background: white;
+  background-color: rgb(235, 235, 235);
   object-fit: fill;
   &:active{
     box-shadow: none;
