--- a/app/assets/stylesheets/spree/frontend/views/spree/shared/_footer.scss
+++ b/app/assets/stylesheets/spree/frontend/views/spree/shared/_footer.scss
@@ -37,7 +37,7 @@
 }
 
 #content-wrap {
-  padding-bottom: 3rem;    /* Footer height */
+  padding-bottom: 3rem;
 }
 .footer_icon{
   padding-right: 2%;
