--- a/app/assets/stylesheets/spree/frontend/views/spree/shared/_footer.scss
+++ b/app/assets/stylesheets/spree/frontend/views/spree/shared/_footer.scss
@@ -194,9 +194,7 @@
 }
 
 .default_choose{
-  background: white;
-  //background: rgb(250, 250, 250);
-// border: 1px solid black;
+  background-color: rgb(250, 250, 250);
 }
 
 @media (max-width: 1200px) {
