--- a/app/views/spree/contact_us/contacts/new.html.erb
+++ b/app/views/spree/contact_us/contacts/new.html.erb
@@ -51,8 +51,10 @@
 </div>
 <div class="col-lg-4 col-md-12 col-sm-12 map" >
 
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2572.6541392515014!2d23.995477851292918!3d49.848955838301244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add971257e953%3A0x606a03e658ee7384!2z0LLRg9C70LjRhtGPINCo0LXQstGH0LXQvdC60LAsIDEyMCwg0JvRjNCy0ZbQsiwg0JvRjNCy0ZbQstGB0YzQutCwINC-0LHQu9Cw0YHRgtGMLCA3OTAwMA!5e0!3m2!1suk!2sua!4v1596230363178!5m2!1suk!2sua"
-          width="100%" height="100%" id="map" frameborder="0" style="border:0" allowfullscreen></iframe>
+  
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2574.855810383638!2d23.9750257!3d49.807578400000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473ae7e3e4f743a7%3A0x62ebaf6e4c6ecfcb!2z0JfQvdCw0Log0K_QutC-0YHRgtGW!5e0!3m2!1suk!2sua!4v1710664572528!5m2!1suk!2sua"
+ width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+ </iframe>
 
 </div>
 <div class="col-lg-4 col-md-12 col-sm-12">
